--- a/website-marcatching/app/product/[slug]/product.module.css
+++ b/website-marcatching/app/product/[slug]/product.module.css
@@ -251,9 +251,10 @@
 
   .posterSide {
     position: relative;
+    width: 100%;
     height: auto;
     aspect-ratio: 4/5;
-    max-height: 60vh;
+    max-height: none;
   }
 
   .contentSide {
